# quadrotor_motion_with_df_control

./: README.md
package/: CMakeLists.txt  package.xml
package/launch/: quadrotor_motion_with_df_control.launch
package/src/include/: behavior_follow_path_with_df.h  behavior_land_with_df.h  behavior_quadrotor_df_motion_control.h  behavior_send_path.h  behavior_take_off_with_df.h
package/src/source/: behavior_follow_path_with_df.cpp  behavior_land_with_df.cpp  behavior_quadrotor_df_motion_control.cpp  behavior_send_path.cpp  behavior_take_off_with_df.cpp
subpackages/DifferentialFlatnessController/: CMakeLists.txt  package.xml
subpackages/DifferentialFlatnessController/cfg/: pdcontroller.cfg
subpackages/DifferentialFlatnessController/configs/: AP_soFast.yaml  LargeAngleConfig.yaml
subpackages/DifferentialFlatnessController/include/: PD_controller.hpp
subpackages/DifferentialFlatnessController/launch/: differential_flattness_controller.launch
subpackages/DifferentialFlatnessController/src/: PD_controller.cpp  main_nodes.cpp
subpackages/TrajectoryGenerator/package/: CMakeLists.txt  package.xml  utils_trajs.txt
subpackages/TrajectoryGenerator/package/include/: eth_traj_wrapper.hpp  trajectory_generator.hpp  trajectory_publisher.hpp
subpackages/TrajectoryGenerator/package/src/: eth_traj_wrapper.cpp  main_trajectory_publisher.cpp  trajectory_generator.cpp  trajectory_publisher.cpp
subpackages/TrajectoryGenerator/subpackages/eigen_checks/: package.xml
