<?xml version="1.0"?>
<package format="2">
  <name>differential_flatness_controller</name>
  <version>0.0.0</version>
  <description>The differential_flatness_controller package</description>

  <maintainer email="miguel.fernandez.cortizas@upm.es">Miguel Fernandez Cortizas</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend> 
	<depend>mav_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>Eigen3</depend>
	<depend>mavros</depend>
	<depend>ros_utils_lib</depend>
	<depend>robot_process</depend>

	<depend>geometry_msgs</depend>
	<depend>dynamic_reconfigure</depend>

</package>
