<?xml version="1.0"?>
<package format="2">
  <name>trajectory_generator</name>
  <version>0.0.0</version>
  <description>The BasicController package</description>

  <maintainer email="miguel@todo.todo">miguel</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>std_msgs</depend>
  <depend>sensor_msgs</depend> 
  <depend>mav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>ros_utils_lib</depend>
  
  
  <depend>mav_trajectory_generation_ros</depend>


</package>
